# GO-wongnok/cmd/server/docs/swagger.yaml
@@ -1,3 +1,4 @@
+basePath: /
 definitions:
   dto.CookingDurationResponse:
     properties:
@@ -13,6 +14,20 @@ definitions:
       name:
         type: string
     type: object
+  dto.FavoriteRequest:
+    properties:
+      foodRecipeID:
+        type: integer
+    required:
+    - foodRecipeID
+    type: object
+  dto.FavoriteResponse:
+    properties:
+      foodRecipeID:
+        type: integer
+      userID:
+        type: string
+    type: object
   dto.FoodRecipeRequest:
     properties:
       cookingDurationID:
@@ -20,6 +35,7 @@ definitions:
         - 1
         - 2
         - 3
+        - 4
         type: integer
       description:
         type: string
@@ -388,6 +404,69 @@ paths:
       summary: Create a rating
       tags:
       - ratings
+  /api/v1/food-recipes/favorites:
+    get:
+      consumes:
+      - application/json
+      description: Get all favorites
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.FavoriteResponse'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Get favorites
+      tags:
+      - favorite
+    post:
+      consumes:
+      - application/json
+      description: Create a new favorite for a food recipe by userID
+      parameters:
+      - description: Favorite Request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.FavoriteRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/dto.FavoriteResponse'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Create a favorite
+      tags:
+      - favorite
   /api/v1/users/{id}/food-recipes:
     get:
       consumes:
